2002-12-31  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/doc/reference.xml: Fix typo.

2002-12-23  Mark Mitchell  <mark@codesourcery.com>

	* qm/extension.py (get_class_arguments): Use the __dict__ of the
	class, rather than a direct attribute reference, when checking to
	see if the argument list has already been computed.
	(get_class_arguments_as_dictionary): Likewise.

2002-12-23  Mark Eichin <eichin@metacarta.com>

	* qm/test/test.py (Test.TestField): Fix typo in comment.

2002-12-20  Mark Mitchell  <mark@codesourcery.com>

	* qm/extension.py (get_class_arguments): Allow derived classe
	arguments to override base class arguments.
	(get_class_arguments_as_dictionary): Reimplement.
	* tests/xmldb/QMTest/test_inheritance.py: New file.
	* tests/xmldb/QMTest/classes.qms: Update.
	* tests/xmldb/api.qms/test.qms/derived.qmt: New test.
	
2002-12-18  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/file.py (SubstitutionField): Rework, using
	TupleField as a base class.
	(FileContentsTest.Run): Remove exception-handling code.
	(FileContentsTest.__PerformSubstitutions): Correct.
	* NEWS: Mention change.
	
	* qm/fields.py (ChoiceField): New class.
	* qm/test/test.py (Test.ResourceField): Likewise.
	(Test.TestField): Likewise.
	(Test.arguments): Use them.

2002-12-17  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/result.py (Result): Update documentation string to more
	clearly describe annotations.
	* qm/test/web/web.py (ResultPage.__init__): Do not add a "This
	Test" link to the run menu for a resource.
	(ResultPage.MakeRunUrl): Rename to ...
	(ResultPage.GetRunURL): ... this.
	(ResultPage.GetResultURL): ... new method.
	(StorageResultsStream.GetResult): New method.
	(QMTestServer.HandleShowResults): Use it.
	* qm/test/share/dtml/result.dtml: Display links to resources, as
	appropriate.
	* NEWS: Note that links to results are now available.

2002-12-13  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/web/web.py (NewItemPage.GetClassDescriptions): Use