@@ -1,3 +1,8 @@
+2003-01-21  Jeffrey D. Oldham  <oldham@codesourcery.com>
+
+	* qm/test/target.py (Target._RecordResult): Always record the
+	target which the concurrent execution code assumes exists.
+
 2002-12-31  Mark Mitchell  <mark@codesourcery.com>
 
 	* qm/test/doc/reference.xml: Fix typo.
